Fixed initial slide alignment

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -14,12 +14,14 @@
 }
 
 .pineapple-slide .slider-content-text {
+  text-align: center;
+  margin: 100px;
   color: #2f2c2c !important;
   font-size: 24px;
 }
 
 .pineapple-slide .slider-image {
-  width: 80%;
+  width: 100%;
   margin-left: 10%;
   margin-top: -90px;
 }
